--- a/src/components/Stats.css
+++ b/src/components/Stats.css
@@ -1,5 +1,5 @@
 .stats {
-    margin: 80px 0;
+    margin: 40px 0 80px;
 }
 
 .stats-grid {
